# fastapi-user-items-template

./: .pdm-python  README.md  alembic.ini  docker-compose.yml  logging.conf  pyproject.toml  pytest.ini
.github/workflows/: ci-cd.yml
app/: main.py
app/commons/: enums.py  utils.py
app/core/: config.py
app/db/: database.py
app/routes/auth/: handler.py  schemas.py  tokens.py  utils.py
app/routes/category/: handler.py  models.py  schemas.py
app/routes/items/: handler.py  models.py  schemas.py
app/routes/users/: handler.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 1c170f2ce02b_initial_migration.py  8ff6d4eef6e4_initial_migration.py  d78ee3e3da9f_initial_migration.py
scripts/: db-setup.sh
tests/: conftest.py  fixtures.py
tests/factories/: models_factory.py
tests/integration/: conftest.py  test_integrate_categories.py  test_integrate_items.py  test_integrate_users.py
tests/models/: conftest.py  fixtures.py  test_categories.py  test_items.py  test_users.py
tests/unit/: conftest.py  test_unit_categories.py  test_unit_items.py  test_unit_users.py
tests/utils/: database_utils.py  docker_utils.py  pytest_utils.py
